--- a/ui/nginx/nginx.conf
+++ b/ui/nginx/nginx.conf
@@ -1,9 +1,7 @@
 server {
 
-  listen 443 ssl;
-  listen [::]:443 ssl;
-  include snippets/self-signed.conf;
-  include snippets/ssl-params.conf;
+  listen 80;
+  listen [::]:80;
 
   location / {
     root   /usr/share/nginx/html;
@@ -12,7 +10,7 @@ server {
   }
 
   location /api {
-    proxy_pass http://moneywise-backend:8000/api;
+    proxy_pass http://solomon:8000/api;
   }
 
   error_page   500 502 503 504  /50x.html;
