--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,9 +12,21 @@ services:
       - ./backend:/app
     ports:
       - 3000:3000
+    environment:
+      - DEBUG=${DEBUG}
 
-  # extending
+  # included for convenience
+  # exits when complete (which causes prod deploy failure)
   migrations:
+    image: 383314943195.dkr.ecr.us-east-1.amazonaws.com/solomon:latest
+    command: "python3 manage.py migrate"
+    secrets:
+      - db-username
+      - db-password
+      - db-host
+      - db-port
+      - db-name
+      - django-secret-key
     build:
       context: ./backend
     depends_on:
@@ -36,10 +48,15 @@ services:
     ports:
       - 3306:3306
     environment:
-      MYSQL_DATABASE: data
-      MYSQL_ROOT_PASSWORD: admin
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: admin
+      MYSQL_DATABASE_FILE: /run/secrets/db-name
+      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db-rootpassword
+      MYSQL_USER_FILE: /run/secrets/db-username
+      MYSQL_PASSWORD_FILE: /run/secrets/db-password
+    secrets:
+      - db-name
+      - db-rootpassword
+      - db-username
+      - db-password
 
   myadmin:
     image: phpmyadmin/phpmyadmin
@@ -47,3 +64,20 @@ services:
       - 8090:80
     environment:
       PMA_HOST: mysql
+
+secrets:
+  db-name:
+    file: ./local-secrets/db-name.txt
+  db-username:
+    file: ./local-secrets/db-username.txt
+  db-password:
+    file: ./local-secrets/db-password.txt
+  db-host:
+    file: ./local-secrets/db-host.txt
+  db-port:
+    file: ./local-secrets/db-port.txt
+  db-rootpassword:
+    file: ./local-secrets/db-rootpassword.txt
+
+  django-secret-key:
+    file: ./local-secrets/django-secret-key.txt
