--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,10 @@ services:
       - solomon
     healthcheck:
       test: ["CMD", "python3", "health.py"]
+      interval: 1m
       timeout: 3s
-      retries: 10
-      start_period: 10s
+      retries: 3
+      start_period: 0s
     secrets:
       - db-username
       - db-password
@@ -31,6 +32,12 @@ services:
     restart: always
     networks:
       - solomon
+    healthcheck:
+      test: curl -f http://localhost/api/ping || exit 1
+      interval: 1m
+      timeout: 3s
+      retries: 3
+      start_period: 0s
     depends_on:
       solomon:
         condition: service_healthy
