--- a/ui/.env
+++ b/ui/.env
@@ -1,3 +1,6 @@
-REACT_APP_MONEYWISE_BASE_URL="http://localhost:8000"
+# pass API requests through nginx so we get the same behavior locally
+REACT_APP_BASE_URL="http://localhost"
+
+# auth0
 REACT_APP_AUTH0_DOMAIN="dev-jix9d7st-actual-money.auth0.com"
 REACT_APP_AUTH0_CLIENT_ID="mY5g2Zggemb1yMk9JTXaPutF67IJwyOA"
