--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,13 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Backend unit tests
-        run: docker-compose run --rm solomon python manage.py test
+        run: docker-compose run --rm --no-deps solomon python manage.py test
+      
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.4
+        with:
+          node-version: 12.x
+          check-latest: yes
 
       - name: Frontend unit tests
         run: |
