--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
 
     - name: Writing secrets
       run: |
+        mkdir -p secrets || true
         echo "$DB_NAME" > ./secrets/db-name
         echo "$DB_USERNAME" > ./secrets/db-username
         echo "$DB_PASSWORD" > ./secrets/db-password
