--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Docker Layer Caching
-        uses: satackey/action-docker-layer-caching@v0.0.11
-
-      - name: Backend unit tests
-        run: docker-compose run --rm --no-deps solomon python manage.py test
       
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.4
@@ -32,4 +26,4 @@ jobs:
           useLockFile: yes
 
       - name: Frontend unit tests
-        run: CI=true yarn test -u --ci --coverage --reporters=default --reporters=jest-junit
+        run: cd ui; CI=true yarn test -u --ci --coverage --reporters=default --reporters=jest-junit
