--- a/.github/workflows/bdd.yml
+++ b/.github/workflows/bdd.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Docker Layer Caching
+        uses: satackey/action-docker-layer-caching@v0.0.11
 
       - name: Start environment
         run: docker-compose up -d
