--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,9 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
+        
+    - name: Add solomon context
+      run: docker --version; docker context create ecs --from-env solomon
 
     - name: Writing secrets
       run: |
@@ -50,9 +53,6 @@ jobs:
 
     - name: Docker Layer Caching
       uses: satackey/action-docker-layer-caching@v0.0.11
-    
-    - name: Add solomon context
-      run: docker context create ecs --from-env solomon
 
     - name: Run update script
       run: |
