--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,9 @@ jobs:
         aws-region: us-east-1
         
     - name: Add solomon context
-      run: docker --version; docker context create ecs --from-env solomon
+      run: |
+        curl -L https://raw.githubusercontent.com/docker/compose-cli/main/scripts/install/install_linux.sh | sh
+        docker context create ecs --from-env solomon
 
     - name: Writing secrets
       run: |
