--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 on:
-#   push:
-#     branches:
-#     - main
-#   schedule:
-#   - cron: "0 2 * * 1-5"
+   push:
+     branches:
+     - main
+   schedule:
+   - cron: "0 2 * * 1-5"
   workflow_dispatch:
 
 
