--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,7 @@
 on:
    push:
-     branches:
-     - main
-   schedule:
-   - cron: "0 2 * * 1-5"
-  workflow_dispatch:
+     branches: [ main ]
+   workflow_dispatch:
 
 
 name: Deploy
