refactor(ui): Use clean auth0 tenant

--- a/ui/.env
+++ b/ui/.env
@@ -2,5 +2,5 @@
 REACT_APP_BASE_URL="http://localhost"
 
 # auth0
-REACT_APP_AUTH0_DOMAIN="dev-jix9d7st-actual-money.auth0.com"
-REACT_APP_AUTH0_CLIENT_ID="mY5g2Zggemb1yMk9JTXaPutF67IJwyOA"
+REACT_APP_AUTH0_DOMAIN="solomon-money.us.auth0.com"
+REACT_APP_AUTH0_CLIENT_ID="qhExE7PTD7R480PaCbfbByB5oWbs5n8Y"
