--- a/ui/package.json
+++ b/ui/package.json
@@ -24,8 +24,11 @@
         "react-bootstrap": "^1.4.0",
         "react-dom": "^16.13.1",
         "react-google-charts": "3.0.15",
+        "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
+        "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0",
         "rrule": "2.6.4",
         "typescript": "^3.7.5"
     },
