--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
         "@types/node": "^12.12.55",
         "@types/react": "^16.9.49",
         "@types/react-dom": "^16.9.8",
+        "@types/react-redux": "^7.1.15",
         "@types/react-router-dom": "^5.1.6",
         "axios": "^0.21.1",
         "axios-hooks": "^2.1.0",
