--- a/migrations.compose.yml
+++ b/migrations.compose.yml
@@ -6,7 +6,7 @@ services:
 
   # exits when complete (which causes prod deploy failure)
   migrations:
-    image: 383314943195.dkr.ecr.us-east-1.amazonaws.com/solomon:latest
+    image: 383314943195.dkr.ecr.us-east-1.amazonaws.com/solomon:${TAG:-latest}
     command: "python3 manage.py migrate"
     secrets:
       - db-migration-username
