--- a/migrations.compose.yml
+++ b/migrations.compose.yml
@@ -15,6 +15,8 @@ services:
       - db-port
       - db-name
       - django-secret-key
+    networks:
+      - solomon
     build:
       context: ./backend
 
