--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,12 +22,14 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
         
+    - name: Docker Layer Caching
+      uses: satackey/action-docker-layer-caching@v0.0.11
+
     - name: Build images
       run: |
-         export TAG=`git rev-parse HEAD`
-         docker-compose build solomon-ui solomon
+         TAG=`git rev-parse HEAD` docker-compose build solomon-ui solomon
          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 383314943195.dkr.ecr.us-east-1.amazonaws.com
-         docker-compose push
+         TAG=`git rev-parse HEAD` docker-compose push solomon-ui solomon
 
     - name: Connect to droplet and update
       run: |
