--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,15 +31,14 @@ jobs:
          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 383314943195.dkr.ecr.us-east-1.amazonaws.com
          TAG=`git rev-parse HEAD` docker-compose push solomon-ui solomon
 
+    - name: Add SSH agent
+      uses: webfactory/ssh-agent@v0.4.1
+      with:
+        ssh-private-key: ${{secrets.SSH_KEY_GIT}}
+
     - name: Connect to droplet and update
       run: |
-         
          echo "$DROPLET_SSH_KEY" > droplet_key
-         
-         echo "$SSH_KEY_GIT" > github_key
-         ssh-agent | bash
-         ssh-add github_key
-         
          ssh -A -i droplet_key root@167.71.186.2 "cd solomon && git fetch && git checkout main && git pull && ./update-droplet.sh"
       env:
          SSH_KEY_GIT: ${{secrets.SSH_KEY_GIT}}
