--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Connect to droplet and update
       run: |
          echo "$DROPLET_SSH_KEY" > droplet_key
-         ssh -A -i droplet_key root@167.71.186.2 "cd solomon && git fetch && git checkout main && git pull && ./update-droplet.sh"
+         ssh -A -i droplet_key -o "StrictHostKeyChecking=no" root@167.71.186.2 "cd solomon && git fetch && git checkout main && git pull && ./update-droplet.sh"
       env:
          SSH_KEY_GIT: ${{secrets.SSH_KEY_GIT}}
          DROPLET_SSH_KEY: ${{secrets.DROPLET_SSH_KEY}}
