--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,7 @@
         "react-scripts": "3.4.3",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
+        "retry-axios": "^2.4.0",
         "rrule": "2.6.4",
         "typescript": "^3.7.5"
     },
