--- a/ui/package.json
+++ b/ui/package.json
@@ -1,68 +1,90 @@
 {
-    "name": "solomon-ui",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@auth0/auth0-react": "^1.0.0",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.5.0",
-        "@testing-library/user-event": "^7.2.1",
-        "@types/jest": "^24.9.1",
-        "@types/lodash": "^4.14.165",
-        "@types/node": "^12.12.55",
-        "@types/react": "^16.9.49",
-        "@types/react-dom": "^16.9.8",
-        "@types/react-redux": "^7.1.15",
-        "@types/react-router-dom": "^5.1.6",
-        "axios": "^0.21.1",
-        "axios-hooks": "^2.1.0",
-        "bootstrap": "^4.6.0",
-        "focus-trap-react": "^5.0.1",
-        "formik": "^2.2.6",
-        "jest-junit": "^12.0.0",
-        "lodash": "^4.17.21",
-        "react": "^16.13.1",
-        "react-bootstrap": "^1.4.0",
-        "react-dom": "^16.13.1",
-        "react-google-charts": "3.0.15",
-        "react-redux": "^7.2.2",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.3",
-        "redux": "^4.0.5",
-        "redux-thunk": "^2.3.0",
-        "retry-axios": "^2.4.0",
-        "rrule": "2.6.4",
-        "typescript": "^3.7.5"
-    },
-    "jest-junit": {
-        "suiteName": "jest tests",
-        "outputDirectory": ".",
-        "outputName": "junit.xml",
-        "uniqueOutputName": "false",
-        "classNameTemplate": "{classname}-{title}",
-        "titleTemplate": "{classname}-{title}",
-        "ancestorSeparator": " › ",
-        "usePathForSuiteName": "true"
-    },
-    "scripts": {
-        "start": "export HTTPS=true || SET \"HTTPS=true\" && export PORT=8080 || SET \"PORT=8080\" && react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
+  "name": "solomon-ui",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@auth0/auth0-react": "^1.0.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.165",
+    "@types/node": "^12.12.55",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.15",
+    "@types/react-router-dom": "^5.1.6",
+    "axios": "^0.21.1",
+    "axios-hooks": "^2.1.0",
+    "bootstrap": "^4.6.0",
+    "focus-trap-react": "^5.0.1",
+    "formik": "^2.2.6",
+    "jest-junit": "^12.0.0",
+    "lodash": "^4.17.21",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^16.13.1",
+    "react-google-charts": "3.0.15",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "retry-axios": "^2.4.0",
+    "rrule": "2.6.4",
+    "typescript": "^3.7.5"
+  },
+  "jest-junit": {
+    "suiteName": "jest tests",
+    "outputDirectory": ".",
+    "outputName": "junit.xml",
+    "uniqueOutputName": "false",
+    "classNameTemplate": "{classname}-{title}",
+    "titleTemplate": "{classname}-{title}",
+    "ancestorSeparator": " › ",
+    "usePathForSuiteName": "true"
+  },
+  "scripts": {
+    "start": "export HTTPS=true || SET \"HTTPS=true\" && export PORT=8080 || SET \"PORT=8080\" && react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public",
+    "deploy-storybook": "storybook-to-ghpages --out=storybook-static"
+  },
+  "eslintConfig": {
+    "extends": "react-app",
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
         ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/node-logger": "^6.2.9",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "^6.2.9",
+    "@storybook/storybook-deployer": "^2.8.8"
+  }
 }
