--- a/ui/package.json
+++ b/ui/package.json
@@ -27,7 +27,7 @@
     "react-google-charts": "3.0.15",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "retry-axios": "^2.4.0",
@@ -86,5 +86,8 @@
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
     "@storybook/storybook-deployer": "^2.8.8"
+  },
+  "resolutions": {
+    "babel-loader": "8.1.0"
   }
 }
