--- a/.github/workflows/publish-storybook.yml
+++ b/.github/workflows/publish-storybook.yml
@@ -29,3 +29,5 @@ jobs:
 
     - name: Deploy Storybook
       run: cd ui; yarn deploy-storybook
+      env:
+         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
