--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,7 @@
 on:
-   push:
-     branches: [ main ]
+# CD disabled because server is off.
+#    push:
+#      branches: [ main ]
    workflow_dispatch:
 
 
